--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "bot:discord": "node scripts/discord-control-bot.mjs"
   },
   "dependencies": {
     "next": "16.1.6",
