--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "bot:discord": "node scripts/discord-control-bot.mjs",
-    "bot:test": "node scripts/bot2.mjs"
+    "bot": "node app/bot.mjs"
   },
   "dependencies": {
     "next": "16.1.6",
